--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,25 @@
     height: 100%;
     align-items: center;
 }
+body {
+    background-image: url("../img/bg.jpg");
+    background-color: #cccccc;
+   }
 .fullScreennoCenter{
     width: 100%;
     height: 100%;
 }
-
+header{
+    background-color: #222;
+    color: #fff;
+    font-size: 12px;
+    top: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
 footer {
     background-color: #222;
     color: #fff;
